Basic_style.css
body {
    background-color: coral;
}

h1 {
    color: rgba(8, 141, 165, 1);
    margin-left: 100px;
    text-shadow: 1px .5px 4px rgba(0, 0, 0, 0.6);
}

.container {
    width: 450px;
    height: 450px;
    background-color: #faebd7;
    border: 2px solid black;
    border-radius: 5%;
}

.container.squares:nth-child(-n+4) p {
    background-image: url("icons2.png");
    color: #fff;
    float: left;
    width: 100px;
    height: 100px;
    margin: 5px;
    border: 1px solid black;
    border-radius: 25%;
    cursor: pointer;
    transition: .5s ease-in-out;
}

/*Select all squares paragraphs in array*/
.squares:nth-child(1) {
    font-family: "Arial, Helvetica, sans-serif";
    font-size: 1.5em;
    font-weight: 900;
    text-align: center;
    margin: 0;
    text-shadow: 2px 1px 4px rgba(0, 0, 0 , 0.8);

}
.squares:nth-child(2) p {
    font-family: "Arial, Helvetica, sans-serif";
    font-size: 1.5em;
    font-weight: 900;
    text-align: center;
    margin: 0;
    text-shadow: 2px 1px 4px rgba(0, 0, 0 , 0.8);

}
.squares:nth-child(3) p {
    font-family: "Arial, Helvetica, sans-serif";
    font-size: 1.5em;
    font-weight: 900;
    text-align: center;
    margin: 0;
    text-shadow: 2px 1px 4px rgba(0, 0, 0 , 0.8);

}
.squares:nth-child(4) p {
    font-family: "Arial, Helvetica, sans-serif";
    font-size: 1.5em;
    font-weight: 900;
    text-align: center;
    margin: 0;
    text-shadow: 2px 1px 4px rgba(0, 0, 0 , 0.8);

}

